# CEIA-VisionPorComputadoraII

./: 1_EDA.ipynb  2_Eliminar_duplicados.ipynb  3_Baseline_VGG16.ipynb  README.md  pyproject.toml
